--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
@@ -21,7 +21,10 @@
     <PackageVersion Include="Uno.Extensions.Serialization" Version="2.5.8" />
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="2.5.11" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="2.5.11" />
-    <PackageVersion Include="Uno.Resizetizer" Version="1.1.2" />
+		<PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.5.11" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="4.2.22" />
+		<PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="2.5.11" />
+		<PackageVersion Include="Uno.Resizetizer" Version="1.1.2" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.12" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.WinUI" Version="4.10.12" />
