--- a/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
@@ -14,6 +14,9 @@
 		<PackageVersion Include="Uno.Extensions.Maui.WinUI" Version="2.5.10" />
 		<PackageVersion Include="Uno.Extensions.Navigation" Version="2.5.10" />
 		<PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="2.5.10" />
+		<PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.5.11" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="4.2.22" />
+		<PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="2.5.11" />
 		<PackageVersion Include="Uno.Resizetizer" Version="1.1.2" />
 		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.9" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
