chore(deps): Updating versions

--- a/UI/MauiEmbedding/TelerikApp/TelerikApp/TelerikApp.csproj
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp/TelerikApp.csproj
@@ -56,7 +56,7 @@
 				<PackageReference Include="Uno.WinUI.Lottie" />
 
 				<!-- Include all images by default - matches the __WindowsAppSdkDefaultImageIncludes property in the WindowsAppSDK -->
-				<Content Include="Assets\**;**/*.png;**/*.bmp;**/*.jpg;**/*.dds;**/*.tif;**/*.tga;**/*.gif" Exclude="bin\**;obj\**;**\*.svg" />
+				<Content Include="**/*.png;**/*.bmp;**/*.jpg;**/*.dds;**/*.tif;**/*.tga;**/*.gif" Exclude="bin\**;obj\**;**\*.svg" />
 				<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
 				<Compile Update="**\*.xaml.cs">
 					<DependentUpon>%(Filename)</DependentUpon>
