--- a/UI/MauiEmbedding/SyncfusionApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/SyncfusionApp/Directory.Packages.props
@@ -34,15 +34,13 @@
     <PackageVersion Include="Uno.Extensions.Serialization" Version="2.5.11" />
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="2.5.11" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="2.5.11" />
-    <!--<PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.254" />
-		<PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="4.0.0-dev.27" />
-		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="4.0.0-dev.27" />-->
-    <PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.19" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.12" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="4.2.22" />
+		<PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="2.5.11" />
+    <PackageVersion Include="Uno.Resizetizer" Version="1.1.2" />
+    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.13" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageVersion Include="Uno.WinUI" Version="4.10.12" />
-    <PackageVersion Include="Uno.WinUI.Lottie" Version="4.10.12" />
-    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.10.12" />
+    <PackageVersion Include="Uno.WinUI" Version="4.10.13" />
+    <PackageVersion Include="Uno.WinUI.Lottie" Version="4.10.13" />
+    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.10.13" />
   </ItemGroup>
 </Project>
