chore: update PackageReference

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Mobile/SkiaSharpTest.Mobile.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Mobile/SkiaSharpTest.Mobile.csproj
@@ -14,7 +14,7 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.5" />
     <PackageReference Include="Uno.WinUI" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
