--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -42,9 +42,9 @@
   </ItemGroup>
   <ItemGroup>	
 	<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />	
-	<PackageReference Include="SkiaSharp" Version="2.88.4-preview.84" />	
-	<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.4-preview.84" />	
-	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+	<PackageReference Include="SkiaSharp" Version="2.88.5" />	
+	<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.5" />	
+	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.5" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
