fix: Canaries only update project to be built

--- a/build-samples.yml
+++ b/build-samples.yml
@@ -11,6 +11,8 @@ steps:
 
 - ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/canaries') }}:
   - template: .vsts-ci.canaries.yml
+    parameters:
+      solution: ${{ parameters.path }}
 
 - powershell: |
       & choco install vswhere
