--- a/.vsts-ci.canaries.yml
+++ b/.vsts-ci.canaries.yml
@@ -1,10 +1,16 @@
+parameters:
+- name: solution
+  type: string
+  default: ''
+
 steps:
 - pwsh: |
     git merge origin/master -s recursive -X theirs
     $savedMSBuildExtensionsPath = $env:MSBuildExtensionsPath
     $env:MSBuildExtensionsPath = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild'
+    $folderPath = [System.IO.Path]::GetDirectoryName("${{ parameters.solution }}");
     dotnet new sln --name=Uno.Samples.generated
-    dotnet sln Uno.Samples.generated.sln add (Get-ChildItem -Recurse *.csproj)
+    dotnet sln Uno.Samples.generated.sln add (Get-ChildItem -Path $folderPath -Recurse *.csproj)
     $env:MSBuildExtensionsPath = $savedMSBuildExtensionsPath
 
 - task: nventiveCanaryUpdater@5
