--- a/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp.Wasm/PaginationPeopleApp.Wasm.csproj
+++ b/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp.Wasm/PaginationPeopleApp.Wasm.csproj
@@ -52,11 +52,11 @@
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.24" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="5.0.0-dev.3213" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.3213" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.3213" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.2298" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
