Added Uno Toolkit Skia WinUI

--- a/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Mobile/UnoZIndex.Mobile.csproj
+++ b/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Mobile/UnoZIndex.Mobile.csproj
@@ -24,6 +24,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.Skia.WinUI" />
 		<PackageReference Include="Uno.WinUI" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="Uno.Extensions.Configuration" />
