--- a/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Wasm/UnoZIndex.Wasm.csproj
+++ b/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Wasm/UnoZIndex.Wasm.csproj
@@ -56,6 +56,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Windows.Compatibility" />
+		<PackageReference Include="Uno.Toolkit.Skia.WinUI" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" />
