--- a/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Windows/UnoZIndex.Windows.csproj
+++ b/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex.Windows/UnoZIndex.Windows.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.Skia.WinUI" />
 		<PackageReference Include="Uno.WinUI" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
