--- a/UI/XamlBrewerUnoApp/XamlBrewerUnoApp/Directory.Packages.props
+++ b/UI/XamlBrewerUnoApp/XamlBrewerUnoApp/Directory.Packages.props
@@ -13,18 +13,18 @@
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.6.0" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.6.0" />
-    <PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.74" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.0-dev.117" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.3431" />
+    <PackageVersion Include="Uno.Resizetizer" Version="1.1.3" />
+    <PackageVersion Include="Uno.Toolkit.WinUI" Version="4.2.22" />
+    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.26" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.29" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.29" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="7.0.29" />
-    <PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.3431" />
-    <PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.0-dev.3431" />
-    <PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.0-dev.3431" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.0-dev.3431" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.0-dev.3431" />
+    <PackageVersion Include="Uno.WinUI" Version="4.10.26" />
+    <PackageVersion Include="Uno.WinUI.Lottie" Version="4.10.26" />
+    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.10.26" />
+    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.10.26" />
+    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.10.26" />
     <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.9.0.2" />
   </ItemGroup>
 </Project>
