chore: Add comment

--- a/build-samples.yml
+++ b/build-samples.yml
@@ -19,6 +19,9 @@ steps:
       echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
   displayName: Set MSBUILDPATH
 
+# NOTE: Currently, the CI just validates that the sample builds, and we don't publish actual apps.
+# In future, if we publish actual apps, it could happen that AndroidAddKeepAlives=false may cause issues.
+# So it will be safer to remove it. For now, we set it to false as it makes the build much faster.
 - powershell: |
       Set-PSDebug -Trace 1
       Write-Host "${{ parameters.path }}"
