--- a/reference/SimpleCalc/MVVM-CSharp/Directory.Packages.props
+++ b/reference/SimpleCalc/MVVM-CSharp/Directory.Packages.props
@@ -1,4 +1,4 @@
-﻿<Project ToolsVersion="15.0">
+<Project ToolsVersion="15.0">
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.1.23419.4" />
@@ -13,27 +13,27 @@
     <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.6" />
     <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.6" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-    <PackageVersion Include="Uno.Extensions.Core.WinUI" Version="3.0.0-dev.2335" />
-    <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.6.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.6.0" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="4.0.0-dev.180" />
+    <PackageVersion Include="Uno.Extensions.Core.WinUI" Version="3.0.9" />
+    <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
+    <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="4.0.3" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.0-dev.120" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.0-dev.120" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.13" />
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.79" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.3597" />
+    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.0-dev.306" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.0-dev.306" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.0" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.0" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="8.0.0-dev.306" />
-    <PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.3597" />
-    <PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.0-dev.3597" />
-    <PackageVersion Include="Uno.WinUI.Markup" Version="5.0.0-dev.506" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="2.6.0-dev.58" />
-    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.0-dev.180" />
-    <PackageVersion Include="Uno.Themes.WinUI.Markup" Version="4.0.0-dev.180" />
-    <PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.0-dev.3597" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.0-dev.3597" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.0-dev.3597" />
+    <PackageVersion Include="Uno.WinUI" Version="5.0.19" />
+    <PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.19" />
+    <PackageVersion Include="Uno.WinUI.Markup" Version="5.0.9" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="5.0.13" />
+    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.3" />
+    <PackageVersion Include="Uno.Themes.WinUI.Markup" Version="4.0.3" />
+    <PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.19" />
+    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.19" />
+    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.19" />
     <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.9.0.2" />
   </ItemGroup>
 </Project>
