--- a/build-samples.yml
+++ b/build-samples.yml
@@ -32,8 +32,10 @@ steps:
 
       $testProject = Get-Item -Path $folderPath\**\*.Tests.csproj;
 
+      Write-Host "Test project - $testProject.FullName"
+
       if (!($testProject -eq $null)) {
-        & dotnet test testProject.FullName -c Release --collect "XPlat code coverage" --logger trx --no-build ;
+        & dotnet test $testProject.FullName -c Release --collect "XPlat code coverage" --logger trx --no-build ;
       }
 
       # fail the build on last exit code non zero
