--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
@@ -15,10 +15,10 @@
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>	
-    <PackageReference Include="HarfBuzzSharp" Version="2.8.2.4-preview.84" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.4-preview.84" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.4-preview.84" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.4-preview.84" />	
+    <PackageReference Include="HarfBuzzSharp" Version="7.3.0" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="7.3.0" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="7.3.0" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="7.3.0" />	
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="5.0.19" />
     <PackageReference Include="Uno.WinUI.DevServer" Version="5.0.19" Condition="'$(Configuration)'=='Debug'" />
