--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
@@ -21,9 +21,9 @@
 	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.6" />
 	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.6" />
 	  
-	  <PackageReference Include="HarfBuzzSharp" Version="2.8.2.4-preview.84" />
-	  <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.4-preview.84" />
-	  <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.4-preview.84" />
+	  <PackageReference Include="HarfBuzzSharp" Version="7.3.0" />
+	  <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="7.3.0" />
+	  <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="7.3.0" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	  <PackageReference Include="SkiaSharp" Version="2.88.6" />
 	  <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.6" />
