--- a/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
@@ -29,16 +29,16 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0" />
-		<PackageReference Include="Uno.WinUI" Version="5.0.19" />
-		<PackageReference Include="Uno.WinUI.DevServer" Version="5.0.19" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 
 
-		<PackageReference Include="SkiaSharp" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.6" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
@@ -46,7 +46,7 @@
 	<Choose>
 		<When Condition="'$(TargetFramework)'=='net7.0-android'">
 			<ItemGroup>
-				<PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.1" />
+				<PackageReference Include="Xamarin.Google.Android.Material" Version="1.9.0.1" />
 				<PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
 			</ItemGroup>
 			<ItemGroup>
@@ -62,7 +62,7 @@
 				<MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
 			</PropertyGroup>
 			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
+				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 			</ItemGroup>
 		</When>
 		<When Condition="'$(TargetFramework)'=='net7.0-maccatalyst'">
@@ -77,7 +77,7 @@
 				<InvariantGlobalization>false</InvariantGlobalization>
 			</PropertyGroup>
 			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
+				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 			</ItemGroup>
 		</When>
 		<When Condition="'$(TargetFramework)'=='net7.0-macos'">
