--- a/UI/MapControlSample/MapControlSample/MapControlSample.Skia.Linux.FrameBuffer/MapControlSample.Skia.Linux.FrameBuffer.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Skia.Linux.FrameBuffer/MapControlSample.Skia.Linux.FrameBuffer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
 		<OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
@@ -17,16 +17,16 @@
 	<ItemGroup>
 		<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="5.0.19" />
-		<PackageReference Include="Uno.WinUI.DevServer" Version="5.0.19" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.19" />
+		<PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />
 		
-		<PackageReference Include="SkiaSharp" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.6" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 
 
 	</ItemGroup>
