--- a/UI/MapControlSample/MapControlSample/MapControlSample.Windows/MapControlSample.Windows.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Windows/MapControlSample.Windows.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
-		<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
+		<TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
 		<RootNamespace>MapControlSample</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<Platforms>x86;x64;arm64</Platforms>
@@ -24,15 +24,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 
-		<PackageReference Include="SkiaSharp" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.6" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.6" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 
 
 		<Manifest Include="$(ApplicationManifest)" />
