--- a/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
@@ -1,4 +1,4 @@
-﻿﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
