chore: Migrating maui samples to net8

--- a/UI/MauiEmbedding/ArcGisApp/Directory.Build.props
+++ b/UI/MauiEmbedding/ArcGisApp/Directory.Build.props
@@ -27,6 +27,12 @@
 		<IsMac>false</IsMac>
 		<IsMacCatalyst>false</IsMacCatalyst>
 		<IsWinAppSdk>false</IsWinAppSdk>
+
+		<MauiVersion Condition=" '$(MauiVersion)' == '' ">8.0.0-rc.2.9373</MauiVersion>
+		<AndroidMaterialVersion  Condition=" '$(AndroidMaterialVersion)' == '' ">1.10.0.1</AndroidMaterialVersion>
+		<AndroidXNavigationVersion  Condition=" '$(AndroidXNavigationVersion)' == '' ">2.6.0.1</AndroidXNavigationVersion>
+		<AndroidXCollectionVersion  Condition=" '$(AndroidXCollectionVersion)' == '' ">1.3.0.1</AndroidXCollectionVersion>
+
 	</PropertyGroup>
 
 	<Choose>
