--- a/UI/MauiEmbedding/SyncfusionApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/SyncfusionApp/Directory.Packages.props
@@ -1,7 +1,11 @@
 <Project ToolsVersion="15.0">
   <ItemGroup>
+		<PackageVersion Include="Microsoft.Maui.Graphics" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.2.23479.6" />
+
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="Syncfusion.Maui.Core" version="22.2.9" />
     <PackageVersion Include="Syncfusion.Maui.Charts" version="22.2.9" />
@@ -35,7 +39,7 @@
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.10" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.10" />
 		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />
-		<PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="3.0.10" />
+		
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.0" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
