--- a/UI/MauiEmbedding/GrapeCityApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/GrapeCityApp/Directory.Packages.props
@@ -1,9 +1,13 @@
 <Project ToolsVersion="15.0">
   <ItemGroup>
+		<PackageVersion Include="Microsoft.Maui.Graphics" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.2.23479.6" />
+
     <PackageVersion Include="C1.Maui.Calendar" Version="6.0.20232.597" />
     <PackageVersion Include="C1.Maui.Grid" Version="6.0.20232.597" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Configuration" Version="3.0.10" />
     <PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.10" />
@@ -26,7 +30,7 @@
     <PackageVersion Include="Uno.Material.WinUI" Version="4.0.4" />
     <PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />
-    <PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="3.0.10" />
+    
     <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.15" />
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.0" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
