--- a/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
@@ -1,7 +1,11 @@
 <Project ToolsVersion="15.0">
 	<ItemGroup>
+		<PackageVersion Include="Microsoft.Maui.Graphics" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.2.23479.6" />
+
 		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Configuration" Version="3.0.10" />
 		<PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.10" />
@@ -16,7 +20,7 @@
 		<PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="3.0.10" />
 		<PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="3.0.10" />
 		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />
-		<PackageVersion Include="Uno.Extensions.Toolkit.WinUI" Version="3.0.10" />
+		
 		<PackageVersion Include="Uno.Resizetizer" Version="1.2.0" />
 		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.19" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
