chore: setting useRidgraph

--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/GrapeCityApp.csproj
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/GrapeCityApp.csproj
@@ -50,6 +50,7 @@
 	<Choose>
 		<When Condition="$(IsWinAppSdk)">
 			<PropertyGroup>
+				<UseRidGraph>true</UseRidGraph>
 				<!--
 				If you encounter this error message:
 
