--- a/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/SyncfusionApp.csproj
+++ b/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/SyncfusionApp.csproj
@@ -50,6 +50,7 @@
 	<Choose>
 		<When Condition="$(IsWinAppSdk)">
 			<PropertyGroup>
+				<UseRidGraph>true</UseRidGraph>
 				<!--
 				If you encounter this error message:
 
