fix: Disabling source code updates

--- a/reference/SimpleCalc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.csproj
@@ -61,6 +61,8 @@
     <UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
   </ItemGroup>
 
-  <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" />
+  <!-- Disabling source code updating - uncomment and do build to update source code from shared resources -->
+  <!-- <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" /> -->
+
   
 </Project>
