--- a/reference/SimpleCalc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.csproj
@@ -65,6 +65,7 @@
     <UnoImage Include="Assets\**\*.svg" />
   </ItemGroup>
 
-  <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" />
+  <!-- Disabling source code updating - uncomment and do build to update source code from shared resources -->
+  <!-- <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" /> -->
 
 </Project>
