--- a/reference/SimpleCalc/MVVM-CSharp/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/MVVM-CSharp/SimpleCalculator/SimpleCalculator.csproj
@@ -63,6 +63,8 @@
     <UnoImage Include="Assets\**\*.svg" />
   </ItemGroup>
   
-  <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" />
+  <!-- Disabling source code updating - uncomment and do build to update source code from shared resources -->
+  <!-- <Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" /> -->
+
 
 </Project>
