chore: add gtk and wasm media player reference

--- a/reference/TubePlayer/Directory.Packages.props
+++ b/reference/TubePlayer/Directory.Packages.props
@@ -41,5 +41,8 @@
     <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.17" />
     <PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.17" />
     <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.10.0.1" />
+    <PackageVersion Include="Uno.WinUI.MediaPlayer.Skia.Gtk" Version="5.0.17" />
+    <PackageVersion Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
+    <PackageVersion Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="5.0.17" />
   </ItemGroup>
 </Project>
