--- a/reference/TubePlayer/TubePlayer.Wasm/TubePlayer.Wasm.csproj
+++ b/reference/TubePlayer/TubePlayer.Wasm/TubePlayer.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -76,6 +76,7 @@
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI.Markup" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TubePlayer\TubePlayer.csproj" />
