--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/TelerikApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/TelerikApp.MauiControls.csproj
@@ -12,7 +12,7 @@
 
 	<ItemGroup>
 		<!-- TODO: Uncomment -->
-		<!--<PackageReference Include="Telerik.UI.for.Maui" />-->
+		<PackageReference Include="Telerik.UI.for.Maui.Trial" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
