--- a/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/TelerikApp/Directory.Packages.props
@@ -28,7 +28,7 @@
 		<PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.19" />
 		<PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.19" />
 
-		<PackageVersion Include="Telerik.UI.for.Maui" Version="6.0.0" />
+		<PackageVersion Include="Telerik.UI.for.Maui.Trial" Version="6.4.0" />
 		<PackageVersion Include="SkiaSharp.NativeAssets.Android" Version="2.88.6" />
 		<PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.6" />
 		<PackageVersion Include="SkiaSharp.NativeAssets.MacCatalyst" Version="2.88.6" />
