chore: Updating package versions

--- a/UI/MauiEmbedding/GrialKitApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/GrialKitApp/Directory.Packages.props
@@ -3,7 +3,7 @@
 		<PackageVersion Include="Microsoft.Maui.Graphics" Version="$(MauiVersion)" />
 		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.2.23479.6" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
 
 		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
