--- a/UI/MauiEmbedding/GrapeCityApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/GrapeCityApp/Directory.Packages.props
@@ -3,7 +3,7 @@
 		<PackageVersion Include="Microsoft.Maui.Graphics" Version="$(MauiVersion)" />
 		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0-rc.2.23479.6" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
 
     <PackageVersion Include="C1.Maui.Calendar" Version="6.0.20232.597" />
     <PackageVersion Include="C1.Maui.Grid" Version="6.0.20232.597" />
