--- a/UI/ChatUI/ChatUI/ChatUI.Windows/ChatUI.Windows.csproj
+++ b/UI/ChatUI/ChatUI/ChatUI.Windows/ChatUI.Windows.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>ChatUI</RootNamespace>
     <Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+		<UseRidGraph>true</UseRidGraph>
     <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
     <DefaultLanguage>en</DefaultLanguage>
     <UseWinUI>true</UseWinUI>
