--- a/UI/MauiEmbedding/GrapeCityApp/Directory.Build.props
+++ b/UI/MauiEmbedding/GrapeCityApp/Directory.Build.props
@@ -66,6 +66,7 @@
 				<SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
 				<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+		<UseRidGraph>true</UseRidGraph>
 			</PropertyGroup>
 		</When>
 	</Choose>
