--- a/UI/OnnxSamples/OnnxSamples/OnnxSamples.Mobile/OnnxSamples.Mobile.csproj
+++ b/UI/OnnxSamples/OnnxSamples/OnnxSamples.Mobile/OnnxSamples.Mobile.csproj
@@ -6,7 +6,18 @@
 
 		<!-- Disabled because of https://github.com/xamarin/xamarin-macios/issues/16401--><!--
 		
-		--><SingleProject>true</SingleProject><OutputType>Exe</OutputType><!-- Debugger workaround https://github.com/dotnet/maui-samples/blob/8aa6b8780b12e97b157514c3bdc54bb4a13001cd/HelloMacCatalyst/HelloMacCatalyst.csproj#L7 --><!-- <MtouchExtraArgs Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> --><!-- Required for C# Hot Reload, except for macOS which uses CoreCLR (not Mono) --><!-- Disabled because of https://github.com/dotnet/runtime/issues/68808 --><!--<UseInterpreter Condition="'$(Configuration)' == 'Debug' and '$(TargetFramework)' != 'net8.0-maccatalyst' and '$(TargetFramework)' != 'net8.0-macos'">True</UseInterpreter>--><IsUnoHead>true</IsUnoHead><SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net8.0-ios'">14.2</SupportedOSPlatformVersion><SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">14.0</SupportedOSPlatformVersion><SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">31.0</SupportedOSPlatformVersion><SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net8.0-macos'">10.14</SupportedOSPlatformVersion></PropertyGroup>
+		-->
+    <SingleProject>true</SingleProject>
+    <OutputType>Exe</OutputType>
+    <!-- Debugger workaround https://github.com/dotnet/maui-samples/blob/8aa6b8780b12e97b157514c3bdc54bb4a13001cd/HelloMacCatalyst/HelloMacCatalyst.csproj#L7 -->
+    <!-- <MtouchExtraArgs Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> -->
+    <!-- Required for C# Hot Reload, except for macOS which uses CoreCLR (not Mono) --><!-- Disabled because of https://github.com/dotnet/runtime/issues/68808 -->
+    <!--<UseInterpreter Condition="'$(Configuration)' == 'Debug' and '$(TargetFramework)' != 'net8.0-maccatalyst' and '$(TargetFramework)' != 'net8.0-macos'">True</UseInterpreter>-->
+    <IsUnoHead>true</IsUnoHead
+    ><SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net8.0-ios'">14.2</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">34.0</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net8.0-macos'">10.14</SupportedOSPlatformVersion></PropertyGroup>
   <PropertyGroup Condition="'$(RuntimeIdentifier)'==''">
     <!-- Default values for command line builds -->
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net8.0-ios'">iossimulator-x64</RuntimeIdentifier>
