fix: CI build error on merge

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,6 @@ msbuild.binlog
 
 /UI/MauiEmbedding/GrialKitApp/nuget.config
 /UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialLicense
+
+/UI/MigrateCustomRenderers/CustomRenderers/CustomRenderers.sln
+/UI/MigratingEffects/XamarinFormsEffect/XamarinFormsEffect.sln
