--- a/reference/TubePlayer/TubePlayer/appsettings.development.json
+++ b/reference/TubePlayer/TubePlayer/appsettings.development.json
@@ -4,7 +4,7 @@
   },
   "YoutubeEndpoint": {
     "Url": "https://youtube.googleapis.com/youtube/v3",
-    "ApiKey": "YOUR-API-KEY-HERE",
+    "ApiKey": "AIzaSyDP_29fVGJ68ertuIGX6xI1Vm8Xo27Xo1A",
     "UseNativeHandler": true
   },
   "YoutubePlayerEndpoint": {
