--- a/reference/TubePlayer/TubePlayer.Windows/TubePlayer.Windows.csproj
+++ b/reference/TubePlayer/TubePlayer.Windows/TubePlayer.Windows.csproj
@@ -44,21 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--
-    If you encounter this error message:
-
-      error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-      Please update to a newer .NET SDK in order to reference this assembly.
-
-    This means that the two packages below must be aligned with the "build" version number of
-    the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-    must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-    -->
-    <!-- <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
-    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" /> -->
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\TubePlayer.MauiControls\TubePlayer.MauiControls.csproj" />
     <ProjectReference Include="..\TubePlayer\TubePlayer.csproj" />
   </ItemGroup>
 
@@ -68,7 +54,7 @@
     package has not yet been restored.
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-    <ProjectCapability Include="Msix"/>
+    <ProjectCapability Include="Msix" />
   </ItemGroup>
 
   <!--
