--- a/UI/AdvancedXBind/AdvancedXBind.Windows/AdvancedXBind.Windows.csproj
+++ b/UI/AdvancedXBind/AdvancedXBind.Windows/AdvancedXBind.Windows.csproj
@@ -12,6 +12,7 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
+		<DefaultLanguage>en</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
