--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Windows/UnoGoodReads.Windows.csproj
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Windows/UnoGoodReads.Windows.csproj
@@ -11,6 +11,7 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
+		<DefaultLanguage>en</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
