chore: partially working chatgpt

--- a/UI/ChatGPT/ChatGPT/ChatGPT/ChatGPT.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT/ChatGPT.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Betalgo.OpenAI" />
     <PackageReference Include="Uno.WinUI" />
     <PackageReference Include="Uno.Resizetizer" />
     <PackageReference Include="Uno.WinUI.Markup" />
