--- a/UI/ChatGPT/ChatGPT/Directory.Packages.props
+++ b/UI/ChatGPT/ChatGPT/Directory.Packages.props
@@ -1,5 +1,6 @@
 ﻿<Project ToolsVersion="15.0">
   <ItemGroup>
+    <PackageVersion Include="Betalgo.OpenAI" Version="7.4.3" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Windows.Compatibility" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
