chore: Message as stream

--- a/UI/ChatGPT/ChatGPT/ChatGPT.Skia.Gtk/ChatGPT.Skia.Gtk.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT.Skia.Gtk/ChatGPT.Skia.Gtk.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" />
     <PackageReference Include="Uno.WinUI.Markup" />
     <PackageReference Include="Uno.Themes.WinUI.Markup" />
@@ -37,8 +38,6 @@
   <Import Project="..\ChatGPT.Shared\base.props" />
 
   <Target Name="ValidateOverrides" BeforeTargets="Restore;_CheckForUnsupportedTargetFramework" Condition="'$(OverrideTargetFramework)' != ''">
-    <Error
-        Text="OverrideTargetFramework set to '$(OverrideTargetFramework)' is invalid. Set OverrideTargetFramework to $([MSBuild]::Escape('$'))(DotNetVersion) or skip building this project (eg unload the project in Visual Studio)"
-        Condition="'$(OverrideTargetFramework)'!='$(DotNetVersion)'" />
+    <Error Text="OverrideTargetFramework set to '$(OverrideTargetFramework)' is invalid. Set OverrideTargetFramework to $([MSBuild]::Escape('$'))(DotNetVersion) or skip building this project (eg unload the project in Visual Studio)" Condition="'$(OverrideTargetFramework)'!='$(DotNetVersion)'" />
   </Target>
 </Project>
