--- a/UI/ChatGPT/ChatGPT/ChatGPT/ChatGPT.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT/ChatGPT.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Betalgo.OpenAI" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.WinUI" />
     <PackageReference Include="Uno.Resizetizer" />
     <PackageReference Include="Uno.WinUI.Markup" />
