--- a/UI/ChatGPT/ChatGPT/Directory.Packages.props
+++ b/UI/ChatGPT/ChatGPT/Directory.Packages.props
@@ -23,6 +23,7 @@
     <PackageVersion Include="Uno.Extensions.Serialization" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.19" />
+    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.6" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.19" />
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.1" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.143" />
