--- a/UI/ChatGPT/ChatGPT/ChatGPT.Mobile/ChatGPT.Mobile.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT.Mobile/ChatGPT.Mobile.csproj
@@ -23,6 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.WinUI" />
     <PackageReference Include="Uno.WinUI.Markup" />
     <PackageReference Include="Uno.Themes.WinUI.Markup" />
@@ -87,8 +88,6 @@
   <Import Project="..\ChatGPT.Shared\base.props" />
 
   <Target Name="ValidateOverrides" BeforeTargets="Restore;_CheckForUnsupportedTargetFramework" Condition="'$(OverrideTargetFramework)' != ''">
-    <Error
-        Text="OverrideTargetFramework set to '$(OverrideTargetFramework)' is missing valid target. Set OverrideTargetFramework to one of the TargetFrameworks for this project or skip building this project (eg unload the project in Visual Studio)"
-        Condition="$(OverrideTargetFramework.Contains('windows10')) or !$(OverrideTargetFrameork.Contains('-'))" />
+    <Error Text="OverrideTargetFramework set to '$(OverrideTargetFramework)' is missing valid target. Set OverrideTargetFramework to one of the TargetFrameworks for this project or skip building this project (eg unload the project in Visual Studio)" Condition="$(OverrideTargetFramework.Contains('windows10')) or !$(OverrideTargetFrameork.Contains('-'))" />
   </Target>
 </Project>
