chore: Adding configuration

--- a/UI/ChatGPT/ChatGPT/ChatGPT/appsettings.json
+++ b/UI/ChatGPT/ChatGPT/ChatGPT/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppConfig": {
-    "Environment": "Production"
+    "Environment": "Production",
+    "ApiKey": "<insert api key here>"
   },
   "ApiClient": {
     "UseNativeHandler": true
