chore: Updating template

--- a/UI/ChatGPT/ChatGPT/ChatGPT.Shared/ChatGPT.Shared.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT.Shared/ChatGPT.Shared.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Include="**\*" Exclude="obj\**;bin\**;*.csproj" />
+    <PackageReference Include="Betalgo.OpenAI" />
     <None Update="AppHead.xaml.cs" DependentUpon="AppHead.xaml" />
   </ItemGroup>
 </Project>
