--- a/UI/ChatGPT/ChatGPT/ChatGPT.Mobile/ChatGPT.Mobile.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT.Mobile/ChatGPT.Mobile.csproj
@@ -8,7 +8,7 @@
     <ApplicationTitle>ChatGPT</ApplicationTitle>
     <!-- App Identifier -->
     <ApplicationId>com.companyname.ChatGPT</ApplicationId>
-    <ApplicationIdGuid>77350B3C-A71C-4BE0-9A6A-A9CC7CD03E95</ApplicationIdGuid>
+    <ApplicationIdGuid>56321894-7FA5-4E7B-A22C-3FE44984EC0C</ApplicationIdGuid>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
@@ -23,18 +23,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.Material.WinUI.Markup" />
+    <PackageReference Include="Betalgo.OpenAI" />
     <PackageReference Include="Uno.WinUI" />
     <PackageReference Include="Uno.WinUI.Markup" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.Themes.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Configuration" />
     <PackageReference Include="Uno.Extensions.Http" />
     <PackageReference Include="Uno.Extensions.Http.Refit" />
+    <PackageReference Include="Uno.Extensions.Logging.WinUI" />
     <PackageReference Include="Uno.Extensions.Serialization.Http" />
     <PackageReference Include="Uno.Extensions.Serialization.Refit" />
+    <PackageReference Include="Uno.Material.WinUI" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Hosting.WinUI" />
     <PackageReference Include="Uno.Extensions.Localization.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI.Markup" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
