--- a/UI/ChatGPT/ChatGPT/ChatGPT.Wasm/ChatGPT.Wasm.csproj
+++ b/UI/ChatGPT/ChatGPT/ChatGPT.Wasm/ChatGPT.Wasm.csproj
@@ -55,24 +55,31 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Betalgo.OpenAI" />
     <PackageReference Include="Microsoft.Windows.Compatibility" />
-    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.Wasm.Bootstrap" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" />
     <PackageReference Include="Uno.WinUI.WebAssembly" />
     <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
     <PackageReference Include="Uno.WinUI.Markup" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" />
     <PackageReference Include="Uno.Themes.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Configuration" />
     <PackageReference Include="Uno.Extensions.Http" />
     <PackageReference Include="Uno.Extensions.Http.Refit" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" />
+    <PackageReference Include="Uno.Extensions.Logging.WinUI" />
     <PackageReference Include="Uno.Extensions.Serialization.Http" />
     <PackageReference Include="Uno.Extensions.Serialization.Refit" />
+    <PackageReference Include="Uno.Material.WinUI" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Hosting.WinUI" />
     <PackageReference Include="Uno.Extensions.Localization.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.WinUI" />
+    <PackageReference Include="Uno.Extensions.Navigation.WinUI.Markup" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI.Markup" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
