--- a/UI/ChatGPT/ChatGPT/Directory.Packages.props
+++ b/UI/ChatGPT/ChatGPT/Directory.Packages.props
@@ -7,7 +7,9 @@
     <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
     <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.7" />
     <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+    <PackageVersion Include="Uno.Extensions.Core.WinUI" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Configuration" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="3.0.19" />
@@ -18,13 +20,18 @@
     <PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
+    <PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="3.0.19" />
+    <PackageVersion Include="Uno.Extensions.Navigation" Version="3.0.19" />
+    <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="3.0.19" />
+    <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Reactive" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Serialization" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.19" />
-    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.6" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="4.0.6" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.19" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.19" />
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.1" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.143" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
@@ -36,7 +43,9 @@
     <PackageVersion Include="Uno.WinUI.Markup" Version="5.0.13" />
     <PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.0.13" />
     <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="5.0.17" />
+    <PackageVersion Include="Uno.Extensions.Navigation.WinUI.Markup" Version="3.0.19" />
     <PackageVersion Include="Uno.Extensions.Reactive.WinUI.Markup" Version="3.0.19" />
+    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.6" />
     <PackageVersion Include="Uno.Themes.WinUI.Markup" Version="4.0.6" />
     <PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.143" />
     <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.143" />
