feat: Add MockChatService to ChatGPT

--- a/UI/ChatGPT/ChatGPT/ChatGPT/appsettings.json
+++ b/UI/ChatGPT/ChatGPT/ChatGPT/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppConfig": {
     "Environment": "Production",
-    "ApiKey": "<Insert your OpenAI API key here. Access https://platform.openai.com/api-keys to generate your OpenAI API key.>"
+    "ApiKey": "" //<Insert your OpenAI API key here. Access https://platform.openai.com/api-keys to generate your OpenAI API key.>
   },
   "ApiClient": {
     "UseNativeHandler": true
