chore: Comment http packages for test

--- a/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
@@ -28,11 +28,13 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Uno.Extensions.Http.Refit" />
-    <PackageReference Include="Uno.Extensions.Http.WinUI" />
-    <!--<PackageReference Include="Uno.WinUI.MediaPlayer.Skia.Gtk" />
-    <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" />-->
-    <!--<PackageReference Include="VideoLAN.LibVLC.Windows" />-->
+    <!--TODO: Http in UnoFeatures is not bringing those-->
+    <!--<PackageReference Include="Uno.Extensions.Http.Refit" />
+    <PackageReference Include="Uno.Extensions.Http.WinUI" />-->
+
+    <!--TODO:Do we need these?-->
+    <!--<PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" />
+    <PackageReference Include="VideoLAN.LibVLC.Windows" />-->
   </ItemGroup>
 
 </Project>
