chore: Update TubePlayer to latest template

--- a/reference/TubePlayer/src/Directory.Build.props
+++ b/reference/TubePlayer/src/Directory.Build.props
@@ -26,13 +26,14 @@
       Configuration;
       Navigation;
       Http;
+      MediaElement;
     </UnoFeatures>
   </PropertyGroup>
 
   <PropertyGroup>
-    <UnoExtensionsVersion>4.1.0-dev.24</UnoExtensionsVersion>
-    <UnoToolkitVersion>5.2.0-dev.32</UnoToolkitVersion>
-    <UnoThemesVersion>4.2.0-dev.18</UnoThemesVersion>
-    <UnoCSharpMarkupVersion>5.2.0-dev.54</UnoCSharpMarkupVersion>
+    <UnoExtensionsVersion>4.1.0-dev.72</UnoExtensionsVersion>
+    <UnoToolkitVersion>5.2.0-dev.44</UnoToolkitVersion>
+    <UnoThemesVersion>4.2.0-dev.19</UnoThemesVersion>
+    <UnoCSharpMarkupVersion>5.2.0-dev.58</UnoCSharpMarkupVersion>
   </PropertyGroup>
 </Project>
